--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<form>
-  <label for="email">Email:</label>
-  <input required="" id="email" type="email" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Form</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+</head>
+<body>
+  <form>
+    <label for="email">Email:</label>
+    <input required="" id="email" type="email" />
 
-  <label for="mensaje">Mensaje:</label>
-  <textarea required="" id="mensaje"></textarea>
+    <label for="mensaje">Mensaje:</label>
+    <textarea required="" id="mensaje"></textarea>
 
-  <input value="Enviar" type="submit" />
-</form>
+    <input value="Enviar" type="submit" />
+  </form>
+</body>
+</html>
